--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   animate_do: ^3.0.2
   sqflite: ^2.2.8+4
   cloud_firestore: ^4.7.1
+  flutter_tts: ^3.7.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
